# hermes-acp-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
hermes_acp_bridge/: __init__.py  __main__.py  acp.py  server.py  session.py  websocket.py
hermes_acp_bridge/dashboard/: __init__.py  handler.py
hermes_acp_bridge/dashboard/static/: app.js  index.html  style.css
hermes_acp_bridge/drivers/: __init__.py  base.py  claude.py  codex.py
tests/: mock_cli.py  test_acp.py  test_session.py
