[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-acp-bridge"
version = "0.1.0"
description = "ACP WebSocket bridge connecting Hermes Agent to Claude Code and Codex CLI"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "memoverflow"}]
requires-python = ">=3.10"
keywords = ["acp", "hermes", "claude-code", "codex", "websocket", "bridge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
hermes-acp-bridge = "hermes_acp_bridge.__main__:main"

[tool.setuptools.packages.find]
include = ["hermes_acp_bridge*"]

[tool.setuptools.package-data]
"hermes_acp_bridge.dashboard" = ["static/*"]
